# ExtraCredit2_OOP

./: CMakeLists.txt  Node_structure.cpp  Node_structure.h  README.md  arguments_parsing_partA.cpp  arguments_parsing_partA.h  code.cpp  code.h  compressed.huff  decoding_huffman.cpp  decoding_huffman.h  defines.h  encoding_huffman.cpp  encoding_huffman.h  header.cpp  header.h  main.cpp
data_sets/: compressed.huff  data.txt
